--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Partik Kumar</h1>
-      <p>I'm <span class="typed" data-typed-items="Researcher, Electrical Engineer, Full Stack Developement Enthusiast, ML/DL/AI Enthusiast, Virtual Assistant Technology Based Android/Windows Automation"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Researcher, Electrical Engineer, Full Stack Developement Enthusiast, ML/DL/AI Enthusiast, Virtual Assistant Based Android/Windows Automation Enthusiast"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/partik-kumar-34a1577b/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://twitter.com/pkiitjee" class="twitter"><i class="bx bxl-twitter"></i></a>
