--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/css/themify-icons.css" rel="stylesheet">
+  <link href="assets/css/plugins.css" rel="stylesheet">
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -61,6 +64,13 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Partik Kumar</h1>
       <p>I'm <span class="typed" data-typed-items="Researcher, Electrical Engineer, Full Stack Developement Enthusiast, ML/DL/AI Enthusiast, Virtual Assistant Based Android/Windows Automation Enthusiast"></span></p>
+      <div class="sub_title">
+											<span>Researcher</span> 
+											<span>Electrical Enginee</span>
+											<span>Full Stack Developement Enthusiast</span> 
+											<span>ML/DL/AI Enthusiast</span>  
+											<span>Virtual Assistant Based Android/Windows Automation Enthusiast</span> 
+      </div>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/partik-kumar-34a1577b/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://twitter.com/pkiitjee" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -69,6 +79,13 @@
         
       </div>
     </div>
+    <div class="mouse_scroll">
+					<a href="#about" class="smoothScroll">
+						<div class="mouse">
+							<i class="ti-angle-double-down"></i>
+						</div>
+					</a>
+				</div>
   </section><!-- End Hero -->
 
   <main id="main">
@@ -728,6 +745,9 @@
   <script src="assets/vendor/typed/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/outside/jquery.min.js"></script>
+  <script src="assets/vendor/outside/wow.min.js"></script>
+  <script src="assets/vendor/outside/animated-headline.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
