--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
       <p>I'm <span class="typed" data-typed-items="Researcher, Electrical Engineer, Full Stack Developement Enthusiast, ML/DL/AI Enthusiast, Virtual Assistant Based Android/Windows Automation Enthusiast"></span></p>
       <div class="sub_title">
 											<span>Researcher</span> 
-											<span>Electrical Enginee</span>
+											<span>Electrical Engineer</span>
 											<span>Full Stack Developement Enthusiast</span> 
-											<span>ML/DL/AI Enthusiast</span>  
-											<span>Virtual Assistant Based Android/Windows Automation Enthusiast</span> 
+											<span>ML/DL/AI Enthusiast</span>
       </div>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/partik-kumar-34a1577b/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
