--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Partik Kumar</h1>
-      <p>I'm a <span class="typed" data-typed-items="Researcher, Electrical Engineer, Full Stack Developement Enthusiast, ML/DL/AI Enthusiast, Virtual Assistant Based Android/Windows Automation Enthusiast"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Electric Power Systems Researcher, Electrical Engineer, Full Stack Developement Enthusiast, ML/DL/AI Enthusiast, Virtual Assistant Based Android/Windows Automation Enthusiast"></span></p>
       <div class="sub_title">
-											<span>Researcher</span> 
+											<span>Electric Power Systems Researcher</span> 
 											<span>Electrical Engineer</span>
 											<span>Full Stack Developement Enthusiast</span> 
 											<span>ML/DL/AI Enthusiast</span>
