--- a/index.html
+++ b/index.html
@@ -748,9 +748,10 @@
         <a href="https://www.facebook.com/pkiitjee/" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/pkiitjee/" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
-      <!-- <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
-      </div> -->
+      <div class="copyright" style="font-size: 15px">
+                &copy; Copyright <strong><span>Partik Kumar</span></strong>. <br>
+                <span>All Rights Reserved</span>
+            </div>
     </div>
   </footer><!-- End Footer -->
 
