--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Partik Kumar</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>New Delhi, Delhi, India 110017</p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/partik-kumar-34a1577b/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://twitter.com/pkiitjee" class="twitter"><i class="bx bxl-twitter"></i></a>
