--- a/index.html
+++ b/index.html
@@ -675,6 +675,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
+		<p>Feel free to send a message and I will get back to you as soon as possible.</p>
         </div>
 
         <div class="row mt-1">
