--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h3>Research Scholar (Electric Power Systems)</h3>
 			
             <p class="fst-italic">
-              I am currently pursuing my PhD from Indian Institute of Technology Delhi, New Delhi, India.
+              I am currently pursuing my PhD from Indian Institute of Technology Delhi, New Delhi, India under the supervision of <a href="https://web.iitd.ac.in/~abhyankar/">Prof. A. R. Abhyankar</a>.
             </p>
             <div class="row">
               <div class="col-lg-6">
