--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 			
 			<h3 class="resume-title">Projects</h3>
             <div class="resume-item">
-              <h4>Community Scale Energy Demand Reduction in India (CEDRI)</h4>
+              <h4>Community Scale Energy Demand Reduction in India<a href="https://cedri.hw.ac.uk/">(CEDRI)</a></h4>
               <h5>2018 - Present</h5>
               <p><em>IIT Delhi, New Delhi, India</em></p>
               <ul>
