--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+        
+		<li><a href="#skills" class="nav-link scrollto"><i class='bx bx-extension' ></i> <span>Technical Skills</span></a></li>
+		<li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+		<li><a href="#courses" class="nav-link scrollto"><i class='bx bx-book-reader' ></i> <span>Courses</span></a></li>
+		<li><a href="#honors" class="nav-link scrollto"><i class='bx bx-award' ></i> <span>Honors & Awards</span></a></li>
+		<li><a href="#test" class="nav-link scrollto"><i class='bx bx-data' ></i> <span>Test Scores</span></a></li>
+		<li><a href="#volunteering" class="nav-link scrollto"><i class='bx bx-group' ></i> <span>Volunteering Experience</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -168,8 +172,8 @@
 		  <div class="skill_2">
             <p>Python</p>
             <div class="skill-container">
-              <div class="skill-value"></div>
-              <p class="skill-text">
+              <div class="skill-value value-90"></div>
+              <p class="skill-text skill-text-90">
                 90%
               </p>
             </div>
@@ -190,8 +194,8 @@
           <div class="skill_2">
             <p>R</p>
             <div class="skill-container">
-              <div class="skill-value value-80"></div>
-              <p class="skill-text skill-text-80">
+              <div class="skill-value value-90"></div>
+              <p class="skill-text skill-text-90">
                 90%
               </p>
             </div>
@@ -200,8 +204,8 @@
 		  <div class="skill_2">
             <p>MATLAB</p>
             <div class="skill-container">
-              <div class="skill-value value-70"></div>
-              <p class="skill-text skill-text-70">
+              <div class="skill-value value-90"></div>
+              <p class="skill-text skill-text-90">
                 90%
               </p>
             </div>
@@ -220,8 +224,8 @@
 		  <div class="skill_2">
             <p>Rust</p>
             <div class="skill-container">
-              <div class="skill-value value-70"></div>
-              <p class="skill-text skill-text-70">
+              <div class="skill-value value-80"></div>
+              <p class="skill-text skill-text-80">
                 80%
               </p>
             </div>
@@ -230,8 +234,8 @@
 		  <div class="skill_2">
             <p>HTML, CSS, JavaScript</p>
             <div class="skill-container">
-              <div class="skill-value value-70"></div>
-              <p class="skill-text skill-text-70">
+              <div class="skill-value value-75"></div>
+              <p class="skill-text skill-text-75">
                 75%
               </p>
             </div>
@@ -240,8 +244,8 @@
 		  <div class="skill_2">
             <p>SQL</p>
             <div class="skill-container">
-              <div class="skill-value value-70"></div>
-              <p class="skill-text skill-text-70">
+              <div class="skill-value value-85"></div>
+              <p class="skill-text skill-text-85">
                 85%
               </p>
             </div>
@@ -277,8 +281,8 @@
 		  <div class="skill_2">
             <p>GAMS</p>
             <div class="skill-container">
-              <div class="skill-value"></div>
-              <p class="skill-text">
+              <div class="skill-value value-90"></div>
+              <p class="skill-text skill-text-90">
                 90%
               </p>
             </div>
@@ -288,8 +292,8 @@
           <div class="skill_2">
             <p>Non-linear Optimization</p>
             <div class="skill-container">
-              <div class="skill-value value-70"></div>
-              <p class="skill-text skill-text-70">
+              <div class="skill-value value-90"></div>
+              <p class="skill-text skill-text-90">
                 90%
               </p>
             </div>
@@ -299,8 +303,8 @@
           <div class="skill_2">
             <p>PSS/E</p>
             <div class="skill-container">
-              <div class="skill-value value-80"></div>
-              <p class="skill-text skill-text-80">
+              <div class="skill-value value-70"></div>
+              <p class="skill-text skill-text-70">
                 70%
               </p>
             </div>
@@ -339,8 +343,8 @@
 		  <div class="skill_2">
             <p>Microsoft Excel</p>
             <div class="skill-container">
-              <div class="skill-value value-80"></div>
-              <p class="skill-text skill-text-80">
+              <div class="skill-value value-90"></div>
+              <p class="skill-text skill-text-90">
                 90%
               </p>
             </div>
@@ -586,7 +590,7 @@
             <div class="col"></div>
         </div>
 
-    <section id="services" class="services">
+    <section id="courses" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -622,7 +626,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <section id="honors" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -714,7 +718,7 @@
       </div>
     </section><!-- End Services Section -->
 	
-	<section id="services" class="services">
+	<section id="test" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -742,7 +746,7 @@
       </div>
     </section><!-- End Services Section -->
 	
-	<section id="services" class="services">
+	<section id="volunteering" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
