--- a/index.html
+++ b/index.html
@@ -471,21 +471,21 @@
               <h4>Larsen &#38; Toubro (L&#38;T) Construction, Chennai, Tamil Nadu</h4>
                             <h5>May 2017 - June 2017</h5>
 							<ul>
-                                    <li>Modelling and analysis of an existing electric distribution system on the ETAP software is part of this training.</li>
+                                    <li>Modelling and analysis of an existing electric distribution system on the ETAP software was part of this training.</li>
                                 </ul>
             </div>
             <div class="resume-item">
               <h4>Jaipur Metro Rail Corporation (JMRC), Jaipur, Rajasthan</h4>
                             <h5>June 2015 - July 2015</h5>
 							<ul>
-                                    <li>Introduction to metro train components, rail assembly, work management at various JMRC departments, and overall functioning, operation and control of the metro train-based transportation system were part of this training.</li>
+                                    <li>Introduction to metro train components, rail assembly, work management at various JMRC departments, and overall operation and control of the metro train-based transportation system were part of this training.</li>
                                 </ul>
 			</div>
 			<div class="resume-item">
               <h4>Giral Lignite Power Plant (GLPP), Barmer, Rajasthan</h4>
                             <h5>June 2014 - July 2014</h5>
 							<ul>
-                                    <li>Introduction to a coal-based 250kW capacity electricity generation plant, its various processes, its departments and their functioning and overall work management at the site were parts of this training.</li>
+                                    <li>Introduction to a coal-based 250kW capacity electricity generation plant, its various processes, its departments, and their functioning and overall work management at the site were parts of this training.</li>
                                 </ul>
 			</div>
 			
