--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
               <h4>Jaipur Metro Rail Corporation (JMRC), Jaipur, Rajasthan</h4>
                             <h5>June 2015 - July 2015</h5>
 							<ul>
-                                    <li>Introduction to metro train components, rail assembly, work management at various JMRC departments, and overall operation and control of the metro train-based transportation system were part of this training.</li>
+                                    <li>Introduction to metro train components, rail assembly, work management at various JMRC departments, and overall operation and control of the metro train-based transportation system were parts of this training.</li>
                                 </ul>
 			</div>
 			<div class="resume-item">
