--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
         
 		<li><a href="#skills" class="nav-link scrollto"><i class='bx bx-extension' ></i> <span>Technical Skills</span></a></li>
-		<li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+		<li><a href="#resume" class="nav-link scrollto"><i class='bx bx-clipboard' ></i> <span>Resume</span></a></li>
 		<li><a href="#courses" class="nav-link scrollto"><i class='bx bx-book-reader' ></i> <span>Courses</span></a></li>
 		<li><a href="#honors" class="nav-link scrollto"><i class='bx bx-award' ></i> <span>Honors & Awards</span></a></li>
 		<li><a href="#test" class="nav-link scrollto"><i class='bx bx-data' ></i> <span>Test Scores</span></a></li>
