--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                                     years of experience designing and developing user-centered digital/print marketing
                                     material from initial concept to final, Wireframing and High-Fidelity protoyping and mockups, polished and deliverable.</em></p> -->
                             <p><b>Career Objective:</b> To Work for an organization that provides me the opportunity to
-                                improve my skills and knowledge and grow along with the Objectives for and with the Organization
+                                improve my skills and knowledge and grow along with the objectives for and with the organization.
                             </p>
 			  <ul>
                 <li>New Delhi, Delhi, India 110017</li>
