--- a/index.html
+++ b/index.html
@@ -395,8 +395,7 @@
               <!-- <p><em>Innovative and deadline-driven Graphic and UI/UX Design Enthusiast with 1.5+
                                     years of experience designing and developing user-centered digital/print marketing
                                     material from initial concept to final, Wireframing and High-Fidelity protoyping and mockups, polished and deliverable.</em></p> -->
-                            <p><b>Career Objective:</b> To Work for an organization that provides me the opportunity to
-                                improve my skills and knowledge and grow along with the objectives for and with the organization.
+                            <p><b>Career Objective:</b>Seeking a challenging position in an organization where I can learn new skills, expand my knowledge, and leverage my learnings while making a significant contribution to the success of the organization.
                             </p>
 			  <ul>
                 <li>New Delhi, Delhi, India 110017</li>
