--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
-              <h4>Partik Kumar</h4>
+              <h4 style="text-transform: capitalize;">Partik Kumar</h4>
               <!-- <p><em>Innovative and deadline-driven Graphic and UI/UX Design Enthusiast with 1.5+
                                     years of experience designing and developing user-centered digital/print marketing
                                     material from initial concept to final, Wireframing and High-Fidelity protoyping and mockups, polished and deliverable.</em></p> -->
@@ -406,7 +406,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Doctor of Philosophy (PhD)</h4>
+              <h4 style="text-transform: capitalize;">Doctor of Philosophy (PhD)</h4>
                             <h5>2018 - Present</h5>
                             <p><em>Indian Institute of Technology Delhi, New Delhi, India</em></p>
                             <p>
@@ -418,7 +418,7 @@
                                 </ul>
             </div>
             <div class="resume-item">
-              <h4>Master of Technology (M.Tech)</h4>
+              <h4 style="text-transform: capitalize;">Master of Technology (M.Tech)</h4>
                             <h5>2016 - 2018</h5>
                             <p><em>Indian Institute of Technology Delhi, New Delhi, India</em></p>
                             <p>
@@ -430,7 +430,7 @@
                                 </ul>
 			</div>
 			<div class="resume-item">
-              <h4>Bachelor of Technology (B.Tech)</h4>
+              <h4 style="text-transform: capitalize;">Bachelor of Technology (B.Tech)</h4>
                             <h5>2012 - 2016</h5>
                             <p><em>College of Technology and Engineering Udaipur, Rajasthan, India</em></p>
                             <p>
@@ -442,7 +442,7 @@
                                 </ul>
 			</div>
 			<div class="resume-item">
-              <h4>Senior Secondary</h4>
+              <h4 style="text-transform: capitalize;">Senior Secondary</h4>
                             <h5>2010 - 2011</h5>
                             <p><em>Mayur Nobles Academy Sr. Sec. School Barmer, Rajasthan, India</em></p>
                             <p>
@@ -454,7 +454,7 @@
                                 </ul>
 			</div>
 			<div class="resume-item">
-              <h4>Secondary</h4>
+              <h4 style="text-transform: capitalize;">Secondary</h4>
                             <h5>2008 - 2009</h5>
                             <p><em>Mayur Nobles Academy Sr. Sec. School Barmer, Rajasthan, India</em></p>
                             <p>
@@ -468,21 +468,21 @@
 			
 			<h3 class="resume-title">Internships</h3>
             <div class="resume-item">
-              <h4>Larsen &#38; Toubro (L&#38;T) Construction, Chennai, Tamil Nadu</h4>
+              <h4 style="text-transform: capitalize;">Larsen &#38; Toubro (L&#38;T) Construction, Chennai, Tamil Nadu</h4>
                             <h5>May 2017 - June 2017</h5>
 							<ul>
                                     <li>Modelling and analysis of an existing electric distribution system on the ETAP software was part of this training.</li>
                                 </ul>
             </div>
             <div class="resume-item">
-              <h4>Jaipur Metro Rail Corporation (JMRC), Jaipur, Rajasthan</h4>
+              <h4 style="text-transform: capitalize;">Jaipur Metro Rail Corporation (JMRC), Jaipur, Rajasthan</h4>
                             <h5>June 2015 - July 2015</h5>
 							<ul>
                                     <li>Introduction to metro train components, rail assembly, work management at various JMRC departments, and overall operation and control of the metro train-based transportation system were parts of this training.</li>
                                 </ul>
 			</div>
 			<div class="resume-item">
-              <h4>Giral Lignite Power Plant (GLPP), Barmer, Rajasthan</h4>
+              <h4 style="text-transform: capitalize;">Giral Lignite Power Plant (GLPP), Barmer, Rajasthan</h4>
                             <h5>June 2014 - July 2014</h5>
 							<ul>
                                     <li>Introduction to a coal-based 250kW capacity electricity generation plant, its various processes, its departments, and their functioning and overall work management at the site were parts of this training.</li>
@@ -512,7 +512,7 @@
                         </div>			
             <h3 class="resume-title">Academic Experience</h3>
             <div class="resume-item">
-              <h4>Researcher</h4>
+              <h4 style="text-transform: capitalize;">Researcher</h4>
               <h5>2018 - Present</h5>
               <p><em>IIT Delhi, New Delhi, India </em></p>
               <ul>
@@ -521,7 +521,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Teaching Assistant</h4>
+              <h4 style="text-transform: capitalize;">Teaching Assistant</h4>
               <h5>2016 - 2018</h5>
               <p><em>IIT Delhi, New Delhi, India</em></p>
               <ul>
@@ -531,7 +531,7 @@
 			
 			<h3 class="resume-title">Projects</h3>
             <div class="resume-item">
-              <h4>Community Scale Energy Demand Reduction in India <a href="https://cedri.hw.ac.uk/">(CEDRI)</a></h4>
+              <h4 style="text-transform: capitalize;">Community Scale Energy Demand Reduction in India <a href="https://cedri.hw.ac.uk/">(CEDRI)</a></h4>
               <h5>2018 - Present</h5>
               <p><em>IIT Delhi, New Delhi, India</em></p>
               <ul>
@@ -541,19 +541,19 @@
 			
 			<h3 class="resume-title">Technologies Developed</h3>
             <div class="resume-item">
-              <h4><em>DemRed</em> mobile application for data acquisition and reporting</h4>
+              <h4 style="text-transform: capitalize;"><em>DemRed</em> mobile application for data acquisition and reporting</h4>
               <ul>
                 <li>Developed a hardware setup for power consumption data acquisition from dwelling/community load point. An accompanying mobile application named <em>DemRed</em> is developed for visualization of the data collected from the dwelling/community load point.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4><em>DetActApp</em> software for load synthesis of dwelling / community</h4>
+              <h4 style="text-transform: capitalize;"><em>DetActApp</em> software for load synthesis of dwelling / community</h4>
               <ul>
                 <li>Developed a non-intrusive load modeling (NILM) framework for performing load synthesis for dwelling/community load. An accompanying web application named <em>DetActApp</em> is developed for analytics and visualization of the NILM results.</li>
               </ul>
             </div>
 			<div class="resume-item">
-              <h4><em>VoltSense</em> software for evaluating voltage sensitivity of dwelling / community</h4>
+              <h4 style="text-transform: capitalize;"><em>VoltSense</em> software for evaluating voltage sensitivity of dwelling / community</h4>
               <ul>
                 <li>Developed a model for voltage sensitivity calculation for community load. An accompanying software application named <em>VoltSense</em> is developed for evaluating the voltage sensitivity factors based on community load details provided by the user.</li>
               </ul>
