--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4 style="text-transform: capitalize;"><em>DetActApp</em> software for load synthesis of dwelling / community</h4>
+              <h4 style="text-transform: capitalize;"><em>DetActApp</em> web application for load synthesis of dwelling / community</h4>
               <ul>
                 <li>Developed a non-intrusive load modeling (NILM) framework for performing load synthesis for dwelling/community load. An accompanying web application named <em>DetActApp</em> is developed for analytics and visualization of the NILM results.</li>
               </ul>
