--- a/index.html
+++ b/index.html
@@ -547,13 +547,13 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4 style="text-transform: capitalize;"><em>DetActApp</em> web application for load synthesis of dwelling / community</h4>
+              <h4 style="text-transform: capitalize;"><em>DetActApp</em> web application for load synthesis of dwelling/community loads</h4>
               <ul>
                 <li>Developed a non-intrusive load modeling (NILM) framework for performing load synthesis for dwelling/community load. An accompanying web application named <em>DetActApp</em> is developed for analytics and visualization of the NILM results.</li>
               </ul>
             </div>
 			<div class="resume-item">
-              <h4 style="text-transform: capitalize;"><em>VoltSense</em> software for evaluating voltage sensitivity of dwelling / community</h4>
+              <h4 style="text-transform: capitalize;"><em>VoltSense</em> software for evaluating voltage sensitivity of dwelling/community loads</h4>
               <ul>
                 <li>Developed a model for voltage sensitivity calculation for community load. An accompanying software application named <em>VoltSense</em> is developed for evaluating the voltage sensitivity factors based on community load details provided by the user.</li>
               </ul>
