--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
               <h4 style="text-transform: capitalize;">Giral Lignite Power Plant (GLPP), Barmer, Rajasthan</h4>
                             <h5>June 2014 - July 2014</h5>
 							<ul>
-                                    <li>Introduction to a coal-based 250kW capacity electricity generation plant, its various processes, its departments, and their functioning and overall work management at the site were parts of this training.</li>
+                                    <li>Introduction to a coal-based 250MW capacity electricity generation plant, its various processes, its departments, and their functioning and overall work management at the site were parts of this training.</li>
                                 </ul>
 			</div>
 			
