--- a/index.html
+++ b/index.html
@@ -509,6 +509,8 @@
                             <button class="btn btn-info disabled m-1">SQL</button>
 							<button class="btn btn-info disabled m-1">Git, GitHub</button>
                             <button class="btn btn-info disabled m-1">Microsoft Excel</button>
+				<button class="btn btn-info disabled m-1">Algorithmic Trad-
+ing</button>
                         </div>			
             <h3 class="resume-title">Academic Experience</h3>
             <div class="resume-item">
