--- a/index.html
+++ b/index.html
@@ -509,8 +509,7 @@
                             <button class="btn btn-info disabled m-1">SQL</button>
 							<button class="btn btn-info disabled m-1">Git, GitHub</button>
                             <button class="btn btn-info disabled m-1">Microsoft Excel</button>
-				<button class="btn btn-info disabled m-1">Algorithmic Trad-
-ing</button>
+				<button class="btn btn-info disabled m-1">Algorithmic Trading</button>
                         </div>			
             <h3 class="resume-title">Academic Experience</h3>
             <div class="resume-item">
@@ -566,6 +565,7 @@ ing</button>
                             <button class="btn btn-info disabled m-1">Reading</button>
                             <button class="btn btn-info disabled m-1">Learning Web Development</button>
                             <button class="btn btn-info disabled m-1">Coding</button>
+				<button class="btn btn-info disabled m-1">Develop Web Applications for Algorithmic Trading</button>
                             <button class="btn btn-info disabled m-1">Stocks Technical Analysis</button>
                             <button class="btn btn-info disabled m-1">Listening to Music</button>
                         </div>
