--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 											<span>ML/DL/AI Enthusiast</span>
       </div>
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/partik-kumar-34a1577b/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://twitter.com/pkiitjee" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/pkiitjee/" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/pkiitjee/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/partik-kumar-34a1577b/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/pkiitjee" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/pkiitjee/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/pkiitjee/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
         
       </div>
     </div>
@@ -122,7 +122,7 @@
             <h3>Research Scholar (Electric Power Systems)</h3>
 			
             <p class="fst-italic">
-              I am currently pursuing my PhD from Indian Institute of Technology Delhi, New Delhi, India under the supervision of <a href="https://web.iitd.ac.in/~abhyankar/">Prof. A. R. Abhyankar</a>.
+              I am currently pursuing my PhD from Indian Institute of Technology Delhi, New Delhi, India under the supervision of <a href="https://web.iitd.ac.in/~abhyankar/" target="_blank">Prof. A. R. Abhyankar</a>.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -532,7 +532,7 @@
 			
 			<h3 class="resume-title">Projects</h3>
             <div class="resume-item">
-              <h4 style="text-transform: capitalize;">Community Scale Energy Demand Reduction in India <a href="https://cedri.hw.ac.uk/">(CEDRI)</a></h4>
+              <h4 style="text-transform: capitalize;">Community Scale Energy Demand Reduction in India <a href="https://cedri.hw.ac.uk/" target="_blank">(CEDRI)</a></h4>
               <h5>2018 - Present</h5>
               <p><em>IIT Delhi, New Delhi, India</em></p>
               <ul>
@@ -849,10 +849,10 @@
       <h3>Partik Kumar</h3>
       <p>New Delhi, Delhi, India 110017</p>
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/partik-kumar-34a1577b/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://twitter.com/pkiitjee" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/pkiitjee/" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/pkiitjee/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/partik-kumar-34a1577b/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/pkiitjee" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/pkiitjee/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/pkiitjee/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
       </div>
       <div class="copyright" style="font-size: 15px">
                 &copy; Copyright <strong><span>Partik Kumar</span></strong>. <br>
